--- a/concept.html
+++ b/concept.html
@@ -1,40 +1,46 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Le concept – Ludus Mentis</title>
-  <meta name="description" content="Ludus Mentis – académie éducative par le jeu coopératif" />
-  <link rel="stylesheet" href="assets/css/styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Notre concept – Ludus Mentis</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-  <div id="header-container"></div>
+    <!-- Header -->
+    <!--#include file="components/header.html" -->
 
-  <main>
-    
-      <section class="piliers">
-        <div class="pilier">
-          <h2>Notre vision</h2>
-          <p>Ludus Mentis transforme le jeu vidéo coopératif en un levier d’apprentissage pour le développement personnel et social des jeunes.</p>
-        </div>
-        <div class="pilier">
-          <h2>Pourquoi le jeu vidéo ?</h2>
-          <p>Parce qu’il fait partie intégrante de la vie des jeunes. Bien encadré, il devient un outil d’éducation puissante, valorisante et inclusive.</p>
-        </div>
-      </section>
-    
-  </main>
+    <main class="container">
+        <section class="section">
+            <h1>Le jeu vidéo comme levier éducatif</h1>
+            <p>
+                Ludus Mentis transforme le jeu vidéo en un espace d’apprentissage stimulant, bienveillant et structuré. Loin des clichés, notre approche repose sur une sélection rigoureuse de jeux collaboratifs et pédagogiques.
+            </p>
+            <p>
+                Encadrés par des animateurs formés, les jeunes développent des compétences psychosociales essentielles tout en jouant. Nous privilégions les jeux coopératifs, les défis en équipe, et les moments de réflexion après chaque session.
+            </p>
+        </section>
 
-  <div id="footer-container"></div>
+        <section class="section card">
+            <h2>Ce que les enfants apprennent en jouant</h2>
+            <ul>
+                <li>💬 Communiquer clairement avec leurs coéquipiers</li>
+                <li>🧘 Gérer leurs émotions dans des situations stressantes</li>
+                <li>🎯 Se fixer des objectifs et persévérer</li>
+                <li>🫱 S’intégrer à un groupe et coopérer avec bienveillance</li>
+            </ul>
+        </section>
 
-  <script>
-    fetch('components/header.html')
-      .then(response => response.text())
-      .then(data => document.getElementById('header-container').innerHTML = data);
-    fetch('components/footer.html')
-      .then(response => response.text())
-      .then(data => document.getElementById('footer-container').innerHTML = data);
-  </script>
+        <section class="section">
+            <h2>Et concrètement ?</h2>
+            <p>
+                Nous utilisons des jeux comme <strong>Overcooked</strong>, <strong>Rocket League</strong> ou <strong>Keep Talking and Nobody Explodes</strong>, accompagnés d’activités de groupe et de temps d’échange pour relier ce qui se passe dans le jeu à la vie réelle.
+            </p>
+            <a href="methodologie.html" class="cta-button">Voir notre méthode pédagogique</a>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <!--#include file="components/footer.html" -->
 </body>
 </html>
