--- a/index.html
+++ b/index.html
@@ -1,95 +1,46 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ludus Mentis – Accueil</title>
-  <meta name="description" content="Ludus Mentis est une académie éducative par le jeu vidéo coopératif destinée aux jeunes de 10 à 15 ans." />
-  <link rel="stylesheet" href="assets/css/styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Ludus Mentis – Le pouvoir éducatif du jeu</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
+    <!-- Header -->
+    <!--#include file="components/header.html" -->
 
-  <!-- HEADER -->
-  <div id="header-container"></div>
+    <main class="container">
+        <section class="section">
+            <h1>Et si le jeu vidéo devenait un tremplin pour grandir ?</h1>
+            <p>
+                Chez <strong>Ludus Mentis</strong>, nous croyons que les jeunes peuvent développer leurs compétences sociales, leur confiance en eux et leur esprit d’équipe grâce à une activité qu’ils aiment déjà : le jeu vidéo.
+            </p>
+            <p>
+                Encadrés par des professionnels, les participant·es apprennent à mieux communiquer, gérer leur stress, coopérer, s’affirmer… tout en jouant à des jeux conçus pour cela.
+            </p>
+            <a href="concept.html" class="cta-button">Découvrir le concept</a>
+        </section>
 
-  <main>
-    <!-- HERO -->
-    <section class="hero">
-      <h1>L'académie du jeu vidéo coopératif</h1>
-      <p>Développer les compétences sociales, émotionnelles et cognitives des jeunes à travers une pratique encadrée et bienveillante du jeu vidéo.</p>
-      <a href="academie.html"><button class="cta-button">Découvrir l'académie</button></a>
-    </section>
+        <section class="section card">
+            <h2>Pourquoi Ludus Mentis ?</h2>
+            <ul>
+                <li>🎮 Parce que les jeux vidéo sont une réalité quotidienne pour les jeunes.</li>
+                <li>🧠 Parce qu’ils peuvent devenir un outil de développement personnel puissant.</li>
+                <li>🤝 Parce qu’encadrés avec soin, ils permettent d’apprendre autrement.</li>
+            </ul>
+        </section>
 
-    <!-- PILIERS -->
-    <section class="piliers">
-      <div class="pilier">
-        <h2>🎮 Jeu coopératif</h2>
-        <p>Des jeux vidéo non violents, centrés sur la collaboration et l'écoute. Le numérique devient un outil d’apprentissage actif.</p>
-      </div>
-      <div class="pilier">
-        <h2>🧠 Développement personnel</h2>
-        <p>Communication, confiance en soi, gestion du stress... Autant de compétences cultivées à chaque séance.</p>
-      </div>
-      <div class="pilier">
-        <h2>👥 Encadrement bienveillant</h2>
-        <p>Facilitateurs formés, approche structurée et accompagnement non thérapeutique, mais profondément humain.</p>
-      </div>
-    </section>
-    
-   <!-- FAQ -->
-    <h2>❓ Foire aux questions</h2>
-   
-    <section class="piliers">
-          <div class="pilier">
-        <h3>Le jeu en académie va-t-il augmenter le temps de jeu à la maison ?</h3>
-        <p>Non. Ludus Mentis propose un cadre structurant qui démontre aux jeunes qu’un usage raisonné est possible et même plus plaisant. En apprenant à jouer ensemble, à alterner avec des activités physiques et à discuter du temps passé à l’écran, les jeunes développent une <strong>autorégulation numérique</strong>.</p>
-      </div>
+        <section class="section">
+            <h2>Un projet soutenu localement</h2>
+            <p>
+                Ludus Mentis est une initiative locale soutenue par la <strong>commune de Walhain</strong> et la <strong>Fédération belge d’esport</strong>, portée par des acteurs engagés dans l’éducation, la prévention et l’innovation pédagogique.
+            </p>
+            <a href="academie.html" class="cta-button">Voir notre académie 2026</a>
+        </section>
+    </main>
 
-      <div class="pilier">
-        <h3>Comment Ludus Mentis évite-t-il l’addiction ?</h3>
-        <p>L’addiction aux jeux vidéo touche environ <strong>12 % des jeunes belges</strong> selon des estimations (<a href="https://www.bruxelles-j.be/drogues-addictions/ecrans-et-jeux-video-usage-excessif-ou-addiction/" target="_blank">Bruxelles-J</a>). Nos ateliers enseignent la gestion du temps d’écran à travers :
-        <ul>
-          <li>des jeux coopératifs non répétitifs</li>
-          <li>des pauses actives, du mouvement</li>
-          <li>des discussions guidées sur la dépendance</li>
-        </ul></p>
-      </div>
-
-      <div class="pilier">
-        <h3>Faut-il déjà être un gamer ?</h3>
-        <p>Pas du tout. Les modules sont conçus pour <strong>tous profils</strong> : curieux, débutants ou habitués. Les jeux sont accessibles, coopératifs, et ne demandent ni réflexes ni expérience préalable.</p>
-      </div>
-
-      <div class="pilier">
-        <h3>Les écrans, c’est mauvais pour la santé ?</h3>
-        <p>Ce n’est pas l’écran en soi, mais <strong>l’usage passif, solitaire et prolongé</strong> qui pose problème. En Belgique, selon Sciensano, <strong>une majorité d’ados dépassent les 2h/j d’écran</strong> (<a href="https://www.sciensano.be/fr/resultats-de-lenquete-nationale-de-consommation-alimentaire-2022-2023/activite-physique-et-sedentarite-chez-les-adolescents-de-10-a-17-ans/temps" target="_blank">Sciensano 2023</a>). Ludus Mentis intègre :
-        <ul>
-          <li>de l’exergaming (mouvement via jeux vidéo)</li>
-          <li>des discussions sur l’équilibre digital</li>
-          <li>des activités réelles hors écran à chaque séance</li>
-        </ul></p>
-      </div>
-
-      <div class="pilier">
-        <h3>Pourquoi une académie du jeu vidéo est-elle nécessaire ?</h3>
-        <p>En Belgique, <strong>près de 40 % de la population joue aux jeux vidéo</strong>, y compris une majorité de jeunes (<a href="https://vgfb.be/nearly-40-of-the-belgian-population-plays-video-games/" target="_blank">VGFB 2023</a>, <a href="https://www.rtbf.be/article/le-jeu-video-a-la-cote-en-belgique-pres-de-40-de-la-population-y-joueraient-11440222" target="_blank">RTBF</a>).</p>
-        <p>Selon l’<a href="https://www.one.be/public/cest-quoi-lone/nos-campagnes/les-enfants-et-les-ecrans/" target="_blank">ONE</a>, les écrans peuvent être positifs si bien encadrés. Ludus Mentis est une <strong>réponse éducative réaliste</strong> à une pratique déjà présente et souvent mal comprise.</p>
-      </div>
-    </section>
-
-  </main>
-
-  <!-- FOOTER -->
-  <div id="footer-container"></div>
-
-  <script>
-    fetch('components/header.html')
-      .then(response => response.text())
-      .then(data => document.getElementById('header-container').innerHTML = data);
-    fetch('components/footer.html')
-      .then(response => response.text())
-      .then(data => document.getElementById('footer-container').innerHTML = data);
-  </script>
+    <!-- Footer -->
+    <!--#include file="components/footer.html" -->
 </body>
 </html>
