--- a/academie.html
+++ b/academie.html
@@ -50,7 +50,17 @@
             </ul>
             <a href="contact.html" class="cta-button">Préinscrire mon enfant</a>
         </section>
-    </main>
+    
+<section id="modules">
+  <h2>Thématiques abordées</h2>
+  <ul>
+    <li><strong>Communication :</strong> Donner un feedback constructif, s’exprimer calmement dans le feu de l’action.</li>
+    <li><strong>Coopération :</strong> Prise de décision collective, gestion des rôles.</li>
+    <li><strong>Gestion des émotions :</strong> Identifier les signaux de stress, techniques de recentrage.</li>
+  </ul>
+</section>
+</main>
+
 
     <footer>
       <div class="container">
