--- a/index.html
+++ b/index.html
@@ -100,4 +100,106 @@
     </footer>
 </body>
 </html>
+ html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Ludus Mentis – Le pouvoir éducatif du jeu</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <style>
+      details {
+        margin-bottom: 1em;
+        cursor: pointer;
+      }
+      summary {
+        font-weight: 700;
+        font-size: 1.1em;
+      }
+    </style>
+</head>
+<body>
+    <header>
+      <div class="container">
+        <h1>Ludus Mentis</h1>
+        <nav>
+          <a href="index.html">Accueil</a>
+          <a href="concept.html">Concept</a>
+          <a href="methodologie.html">Méthodologie</a>
+          <a href="academie.html">Académie</a>
+          <a href="faq.html">FAQ</a>
+          <a href="contact.html">Contact</a>
+        </nav>
+      </div>
+    </header>
+
+    <main class="container">
+        <section class="section">
+            <h1>Et si le jeu vidéo devenait un tremplin pour grandir ?</h1>
+            <p>
+                Chez <strong>Ludus Mentis</strong>, nous croyons que les jeunes peuvent développer leurs compétences sociales, leur confiance en eux et leur esprit d’équipe grâce à une activité qu’ils aiment déjà : le jeu vidéo.
+            </p>
+            <p>
+                Encadrés par des professionnels, les participant·es apprennent à mieux communiquer, gérer leur stress, coopérer, s’affirmer… tout en jouant à des jeux conçus pour cela.
+            </p>
+            <a href="concept.html" class="cta-button">Découvrir le concept</a>
+        </section>
+
+        <section class="section card">
+            <h2>Pourquoi Ludus Mentis ?</h2>
+            <ul>
+                <li>🎮 Parce que les jeux vidéo sont une réalité quotidienne pour les jeunes.</li>
+                <li>🧠 Parce qu’ils peuvent devenir un outil de développement personnel puissant.</li>
+                <li>🤝 Parce qu’encadrés avec soin, ils permettent d’apprendre autrement.</li>
+            </ul>
+        </section>
+
+        <section class="section">
+            <h2>Un projet soutenu localement</h2>
+            <p>
+                Ludus Mentis est une initiative locale soutenue par la <strong>commune de Walhain</strong> et la <strong>Fédération belge d’esport (BESF)</strong>, portée par des acteurs engagés dans l’éducation, la prévention et l’innovation pédagogique.
+            </p>
+            <a href="academie.html" class="cta-button">Voir notre académie 2026</a>
+        </section>
+
+        <section class="section">
+            <h1>Foire aux questions (FAQ)</h1>
+
+            <details>
+                <summary>Quels âges sont concernés par Ludus Mentis ?</summary>
+                <p>Nous accueillons principalement les jeunes entre 10 et 16 ans, adaptés selon les modules et activités proposées.</p>
+            </details>
+
+            <details>
+                <summary>Faut-il avoir déjà de l'expérience avec les jeux vidéo ?</summary>
+                <p>Pas du tout. Ludus Mentis est accessible à tous, débutants ou joueurs confirmés. L'important est la volonté d'apprendre et de progresser.</p>
+            </details>
+
+            <details>
+                <summary>Comment sont encadrées les séances ?</summary>
+                <p>Nos animateurs sont formés à la pédagogie par le jeu et à l'accompagnement bienveillant, assurant un cadre sécurisé et stimulant.</p>
+            </details>
+
+            <details>
+                <summary>Les jeux vidéo ne risquent-ils pas d'encourager l'isolement ?</summary>
+                <p>Au contraire, nos activités sont conçues pour favoriser la coopération, le dialogue et le lien social, en groupe et en équipe.</p>
+            </details>
+
+            <details>
+                <summary>Comment inscrire mon enfant ?</summary>
+                <p>Vous pouvez nous contacter via la page contact pour toute demande d'inscription ou de renseignement.</p>
+            </details>
+        </section>
+    </main>
+
+    <footer>
+      <div class="container">
+        <p>© 2025 Ludus Mentis. Tous droits réservés.</p>
+        <div class="logos-footer">
+          <img src="assets/images/logo_walhain.png" alt="Logo Commune de Walhain" height="40">
+          <img src="assets/images/logo_besf.png" alt="Logo Fédération Belge Esport" height="40">
+        </div>
+      </div>
+    </footer>
+</body>
+</html>
 
