--- a/methodologie.html
+++ b/methodologie.html
@@ -50,7 +50,13 @@
             </p>
             <a href="academie.html" class="cta-button">Découvrir l’académie 2026</a>
         </section>
-    </main>
+    
+<section id="exemple-kolb">
+  <h2>Exemple concret avec le cycle de Kolb</h2>
+  <p>Dans Overcooked, un conflit éclate autour d’une recette. L'animateur aide les joueurs à verbaliser ce qui s'est passé (réflexion), à identifier les causes (conceptualisation), puis à tester une autre organisation pour la suite (expérimentation active). Ce cycle est au cœur de chaque session.</p>
+</section>
+</main>
+
 
     <!-- Footer -->
     
