--- a/a-propos.html
+++ b/a-propos.html
@@ -27,18 +27,12 @@
   
 <section id="biographie">
   <h2>Qui est Antoine Billard ?</h2>
-  <p>Antoine Billard est un pédagogue passionné par l’éducation alternative et le potentiel des jeux vidéo. Titulaire d’un master en sciences de l’éducation, il a travaillé avec des jeunes dans différents contextes scolaires et extrascolaires. Il a créé Ludus Mentis pour proposer un encadrement structuré, bienveillant et stimulant autour du jeu vidéo coopératif.</p>
+  <p>Antoine Billard </p>
 </section>
 
 <section id="partenaires">
   <h2>Nos partenaires</h2>
-  <p>La Commune de Walhain soutient activement Ludus Mentis par la mise à disposition de locaux et une aide logistique. La BESF (Fédération belge d’esport) accompagne le projet dans la sélection de jeux adaptés et la professionnalisation de l'encadrement.</p>
-</section>
-
-<section id="temoignages">
-  <h2>Témoignages</h2>
-  <blockquote>"Mon fils a appris à mieux gérer ses émotions pendant les parties. C’est une vraie révélation." – Parent anonyme</blockquote>
-  <blockquote>"C'était trop bien, on rigolait et en même temps on apprenait à se parler pour gagner." – Participant, 13 ans</blockquote>
+  <p>La Commune de Walhain soutient activement Ludus Mentis par la mise à disposition de locaux et une aide logistique. La BESF (Fédération belge d’esport) .</p>
 </section>
 </main>
 
