--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,21 @@
+<!-- header start -->
+
+<header>
+  <div style="display: flex; align-items: center; justify-content: space-between;">
+    <a href="index.html"><img src="assets/images/Ludus_Mentis_Logo_Transparent.png" alt="Logo Ludus Mentis" /></a>
+    <nav>
+      <a href="index.html">Accueil</a>
+      <a href="concept.html">Concept</a>
+      <a href="academie.html">Académie</a>
+      <a href="a-propos.html">À propos</a>
+      <a href="methodologie.html">Méthodologie</a>
+      <a href="contact.html">Contact</a>
+      
+    </nav>
+  </div>
+</header>
+
+<!-- header end -->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -46,3 +64,14 @@
   </script>
 </body>
 </html>
+
+<!-- footer start -->
+
+<footer>
+  <p><strong>Ludus Mentis</strong> – Académie éducative par le jeu vidéo coopératif</p>
+  <p>📍 Walhain, Belgique · ✉️ <a href="mailto:info@ludusmentis.be">info@ludusmentis.be</a></p>
+  <p>Suivez-nous : 📘 <a href="https://www.facebook.com/Ludus.Mentis.Esport">Facebook</a> </p>
+  <p>&copy; 2025 Ludus Mentis. Tous droits réservés.</p>
+</footer>
+
+<!-- footer end -->
