--- a/methodologie.html
+++ b/methodologie.html
@@ -1,21 +1,5 @@
-<!-- header start -->
+<div w3-include-html="components/header.html"></div>
 
-<header>
-  <div style="display: flex; align-items: center; justify-content: space-between;">
-    <a href="index.html"><img src="assets/images/Ludus_Mentis_Logo_Transparent.png" alt="Logo Ludus Mentis" /></a>
-    <nav>
-      <a href="index.html">Accueil</a>
-      <a href="concept.html">Concept</a>
-      <a href="academie.html">Académie</a>
-      <a href="a-propos.html">À propos</a>
-      <a href="methodologie.html">Méthodologie</a>
-      <a href="contact.html">Contact</a>
-      
-    </nav>
-  </div>
-</header>
-
-<!-- header end -->
 
 <!DOCTYPE html>
 <html lang="fr">
@@ -88,13 +72,31 @@
 </body>
 </html>
 
-<!-- footer start -->
 
-<footer>
-  <p><strong>Ludus Mentis</strong> – Académie éducative par le jeu vidéo coopératif</p>
-  <p>📍 Walhain, Belgique · ✉️ <a href="mailto:info@ludusmentis.be">info@ludusmentis.be</a></p>
-  <p>Suivez-nous : 📘 <a href="https://www.facebook.com/Ludus.Mentis.Esport">Facebook</a> </p>
-  <p>&copy; 2025 Ludus Mentis. Tous droits réservés.</p>
-</footer>
+<div w3-include-html="components/footer.html"></div>
 
-<!-- footer end -->
+<script>
+function includeHTML() {
+  var z, i, elmnt, file, xhttp;
+  z = document.getElementsByTagName("*");
+  for (i = 0; i < z.length; i++) {
+    elmnt = z[i];
+    file = elmnt.getAttribute("w3-include-html");
+    if (file) {
+      xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (this.readyState == 4) {
+          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
+          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
+          elmnt.removeAttribute("w3-include-html");
+          includeHTML();
+        }
+      }      
+      xhttp.open("GET", file, true);
+      xhttp.send();
+      return;
+    }
+  }
+}
+document.addEventListener("DOMContentLoaded", includeHTML);
+</script>
