--- a/academie.html
+++ b/academie.html
@@ -1,5 +1,3 @@
-<div w3-include-html="components/header.html"></div>
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -8,19 +6,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <header>
-      <div class="container">
-        <h1>Ludus Mentis</h1>
-        <nav>
-          <a href="index.html">Accueil</a>
-          <a href="concept.html">Concept</a>
-          <a href="methodologie.html">Méthodologie</a>
-          <a href="academie.html">Académie</a>
-          <a href="faq.html">FAQ</a>
-          <a href="contact.html">Contact</a>
-        </nav>
-      </div>
-    </header>
+    <div id="header"></div>
 
     <main class="container">
         <section class="section">
@@ -64,43 +50,7 @@
 </main>
 
 
-    <footer>
-      <div class="container">
-        <p>© 2025 Ludus Mentis. Tous droits réservés.</p>
-        <div class="logos-footer">
-          <img src="assets/images/logo_walhain.png" alt="Logo Commune de Walhain" height="40">
-          <img src="assets/images/logo_besf.png" alt="Logo Fédération Belge Esport" height="40">
-        </div>
-      </div>
-    </footer>
+    <div id="footer"></div>
+  <script src="assets/js/include.js"></script>
 </body>
 </html>
-
-
-<div w3-include-html="components/footer.html"></div>
-
-<script>
-function includeHTML() {
-  var z, i, elmnt, file, xhttp;
-  z = document.getElementsByTagName("*");
-  for (i = 0; i < z.length; i++) {
-    elmnt = z[i];
-    file = elmnt.getAttribute("w3-include-html");
-    if (file) {
-      xhttp = new XMLHttpRequest();
-      xhttp.onreadystatechange = function() {
-        if (this.readyState == 4) {
-          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
-          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
-          elmnt.removeAttribute("w3-include-html");
-          includeHTML();
-        }
-      }      
-      xhttp.open("GET", file, true);
-      xhttp.send();
-      return;
-    }
-  }
-}
-document.addEventListener("DOMContentLoaded", includeHTML);
-</script>
