--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,3 @@
-<div w3-include-html="components/header.html"></div>
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -46,34 +44,6 @@
       .then(response => response.text())
       .then(data => document.getElementById('footer-container').innerHTML = data);
   </script>
+  <script src="assets/js/include.js"></script>
 </body>
 </html>
-
-
-<div w3-include-html="components/footer.html"></div>
-
-<script>
-function includeHTML() {
-  var z, i, elmnt, file, xhttp;
-  z = document.getElementsByTagName("*");
-  for (i = 0; i < z.length; i++) {
-    elmnt = z[i];
-    file = elmnt.getAttribute("w3-include-html");
-    if (file) {
-      xhttp = new XMLHttpRequest();
-      xhttp.onreadystatechange = function() {
-        if (this.readyState == 4) {
-          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
-          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
-          elmnt.removeAttribute("w3-include-html");
-          includeHTML();
-        }
-      }      
-      xhttp.open("GET", file, true);
-      xhttp.send();
-      return;
-    }
-  }
-}
-document.addEventListener("DOMContentLoaded", includeHTML);
-</script>
