--- a/a-propos.html
+++ b/a-propos.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+<div id="header"></div>
   <div id="header-container"></div>
 
   <main>
@@ -35,6 +36,7 @@
   <p>La Commune de Walhain soutient activement Ludus Mentis par la mise à disposition de locaux et une aide logistique. La BESF (Fédération belge d’esport) .</p>
 </section>
 </main>
+<div id="footer"></div>
 
 
   <div id="footer-container"></div>
