--- a/faq.html
+++ b/faq.html
@@ -6,10 +6,12 @@
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
+<div id="header"></div>
   <main>
     <h1>Foire aux questions</h1>
     
   </main>
+<div id="footer"></div>
   <script src="assets/js/include.js"></script>
 </body>
 </html>
