--- a/mentions.html
+++ b/mentions.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+<div id="header"></div>
   <div id="header-container"></div>
 
   <main>
@@ -25,6 +26,7 @@
       </section>
     
   </main>
+<div id="footer"></div>
 
   <div id="footer-container"></div>
 
