--- a/academie.html
+++ b/academie.html
@@ -1,56 +1,34 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Académie Ludus Mentis – Modules 2026</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="UTF-8">
+  <title>Académie – Ludus Mentis</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <div id="header"></div>
-
-    <main class="container">
-        <section class="section">
-            <h1>L’Académie Ludus Mentis</h1>
-            <p>
-                En 2026, l’académie proposera des modules de 7 séances de 2 heures, conçus pour accompagner les jeunes dans leur développement personnel et social à travers le jeu vidéo.
-            </p>
-            <p>
-                Chaque module est une progression construite sur la collaboration, la communication et la gestion des émotions.
-            </p>
-        </section>
-
-        <section class="section card">
-            <h2>Exemple de contenu d’un module</h2>
-            <ul>
-                <li>🕹️ 7 séances ludiques encadrées</li>
-                <li>🤝 Ateliers sur la communication et le travail en équipe</li>
-                <li>🧘 Exercices de gestion du stress et valorisation</li>
-                <li>🎉 Clôture par une activité collective valorisante</li>
-            </ul>
-        </section>
-
-        <section class="section">
-            <h2>Pourquoi choisir Ludus Mentis ?</h2>
-            <ul>
-                <li>✅ Une méthode validée et adaptée aux jeunes</li>
-                <li>✅ Un encadrement professionnel et bienveillant</li>
-                <li>✅ Un environnement stimulant et ludique</li>
-            </ul>
-            <a href="contact.html" class="cta-button">Préinscrire mon enfant</a>
-        </section>
-    
-<section id="modules">
-  <h2>Thématiques abordées</h2>
-  <ul>
-    <li><strong>Communication :</strong> Donner un feedback constructif, s’exprimer calmement dans le feu de l’action.</li>
-    <li><strong>Coopération :</strong> Prise de décision collective, gestion des rôles.</li>
-    <li><strong>Gestion des émotions :</strong> Identifier les signaux de stress, techniques de recentrage.</li>
-  </ul>
-</section>
-</main>
-
-
-    <div id="footer"></div>
+  <div id="header"></div>
+  <main>
+    <h1>L’Académie Ludus Mentis</h1>
+    <section>
+      <h2>Un programme structuré</h2>
+      <p>Nos modules annuels sont organisés autour de 4 grandes thématiques, chacune composée de 7 séances de 2 heures :</p>
+      <ul>
+        <li>Communication & écoute active</li>
+        <li>Coopération & esprit d’équipe</li>
+        <li>Gestion du stress & régulation émotionnelle</li>
+        <li>Confiance en soi & valorisation des talents</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Ce que vit un jeune à Ludus Mentis</h2>
+      <p>Chaque séance alterne entre temps de jeu coopératif (Nintendo Switch), moments de réflexion en groupe, activités physiques ou créatives, et défis collectifs. L’objectif : apprendre en s’amusant, dans un cadre bienveillant et structuré.</p>
+    </section>
+    <section>
+      <h2>Compétences pour la vie</h2>
+      <p>Un atelier sur Rocket League développe la communication rapide et efficace. Overcooked permet d’explorer la gestion des rôles et la coordination. Chaque activité est pensée pour que les apprentissages soient transférables à la vie quotidienne.</p>
+    </section>
+  </main>
+  <div id="footer"></div>
   <script src="assets/js/include.js"></script>
 </body>
 </html>
