--- a/index.html
+++ b/index.html
@@ -1,84 +1,37 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Ludus Mentis – Le pouvoir éducatif du jeu</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <style>
-      details {
-        margin-bottom: 1em;
-        cursor: pointer;
-      }
-      summary {
-        font-weight: 700;
-        font-size: 1.1em;
-      }
-    </style>
+  <meta charset="UTF-8">
+  <title>Ludus Mentis – Accueil</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <div id="header"></div>
-
-    <main class="container">
-        <section class="section">
-            <h1>Et si le jeu vidéo devenait un tremplin pour grandir ?</h1>
-            <p>
-                Chez <strong>Ludus Mentis</strong>, nous croyons que les jeunes peuvent développer leurs compétences sociales, leur confiance en eux et leur esprit d’équipe grâce à une activité qu’ils aiment déjà : le jeu vidéo.
-            </p>
-            <p>
-                Encadrés par des professionnels, les participant·es apprennent à mieux communiquer, gérer leur stress, coopérer, s’affirmer… tout en jouant à des jeux conçus pour cela.
-            </p>
-            <a href="concept.html" class="cta-button">Découvrir le concept</a>
-        </section>
-
-        <section class="section card">
-            <h2>Pourquoi Ludus Mentis ?</h2>
-            <ul>
-                <li>🎮 Parce que les jeux vidéo sont une réalité quotidienne pour les jeunes.</li>
-                <li>🧠 Parce qu’ils peuvent devenir un outil de développement personnel puissant.</li>
-                <li>🤝 Parce qu’encadrés avec soin, ils permettent d’apprendre autrement.</li>
-            </ul>
-        </section>
-
-        <section class="section">
-            <h2>Un projet soutenu localement</h2>
-            <p>
-                Ludus Mentis est une initiative locale soutenue par la <strong>commune de Walhain</strong> et la <strong>Fédération belge d’esport (BESF)</strong>, portée par des acteurs engagés dans l’éducation, la prévention et l’innovation pédagogique.
-            </p>
-            <a href="academie.html" class="cta-button">Voir notre académie 2026</a>
-        </section>
-
-        <section class="section">
-            <h1>Foire aux questions (FAQ)</h1>
-
-            <details>
-                <summary>Quels âges sont concernés par Ludus Mentis ?</summary>
-                <p>Nous accueillons principalement les jeunes entre 10 et 16 ans, adaptés selon les modules et activités proposées.</p>
-            </details>
-
-            <details>
-                <summary>Faut-il avoir déjà de l'expérience avec les jeux vidéo ?</summary>
-                <p>Pas du tout. Ludus Mentis est accessible à tous, débutants ou joueurs confirmés. L'important est la volonté d'apprendre et de progresser.</p>
-            </details>
-
-            <details>
-                <summary>Comment sont encadrées les séances ?</summary>
-                <p>Nos animateurs sont formés à la pédagogie par le jeu et à l'accompagnement bienveillant, assurant un cadre sécurisé et stimulant.</p>
-            </details>
-
-            <details>
-                <summary>Les jeux vidéo ne risquent-ils pas d'encourager l'isolement ?</summary>
-                <p>Au contraire, nos activités sont conçues pour favoriser la coopération, le dialogue et le lien social, en groupe et en équipe.</p>
-            </details>
-
-            <details>
-                <summary>Comment inscrire mon enfant ?</summary>
-                <p>Vous pouvez nous contacter via la page contact pour toute demande d'inscription ou de renseignement.</p>
-            </details>
-        </section>
-    </main>
-
-    <div id="footer"></div>
+  <div id="header"></div>
+  <main>
+    <section class="hero">
+      <h1>Faire du jeu vidéo un levier éducatif, citoyen et inclusif</h1>
+      <p>À Ludus Mentis, nous transformons la passion du jeu en compétences utiles pour la vie. Communication, coopération, gestion du stress : chaque séance est une opportunité d'apprendre en s'amusant.</p>
+      <a href="academie.html" class="cta">Découvrir l'académie</a>
+    </section>
+    <section class="intro">
+      <h2>Pourquoi Ludus Mentis&nbsp;?</h2>
+      <p>Le jeu vidéo est souvent critiqué. Pourtant, bien encadré, il devient un outil puissant pour développer des compétences sociales, émotionnelles et cognitives. Inspirés par les modèles des clubs sportifs et des académies de musique, nous proposons une structure pérenne et locale.</p>
+    </section>
+    <section class="benefits">
+      <h2>Les bénéfices pour votre enfant</h2>
+      <div class="benefit-grid">
+        <div><h3>Communication</h3><p>Exprimer ses idées clairement et écouter les autres.</p></div>
+        <div><h3>Esprit d’équipe</h3><p>Travailler ensemble vers un objectif commun.</p></div>
+        <div><h3>Gestion du stress</h3><p>Rester concentré et calme dans les moments clés.</p></div>
+        <div><h3>Confiance en soi</h3><p>Valoriser ses talents et oser prendre des initiatives.</p></div>
+      </div>
+    </section>
+    <section class="cta-section">
+      <h2>Prêt à découvrir une autre manière de jouer&nbsp;?</h2>
+      <p><a href="contact.html" class="cta">Contactez-nous</a> pour en savoir plus ou inscrire votre enfant.</p>
+    </section>
+  </main>
+  <div id="footer"></div>
   <script src="assets/js/include.js"></script>
 </body>
 </html>
-
