--- a/academie.html
+++ b/academie.html
@@ -2,31 +2,22 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Notre concept – Ludus Mentis</title>
+    <title>Académie – Ludus Mentis</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <div id="header"></div>
-  <main>
-    <h1>L’Académie Ludus Mentis</h1>
-    <section>
-      <h2>Un programme structuré</h2>
-      <p>Nos modules annuels sont organisés autour de 4 grandes thématiques, chacune composée de 7 séances de 2 heures :</p>
-      <ul>
-        <li>Communication & écoute active</li>
-        <li>Coopération & esprit d’équipe</li>
-        <li>Gestion du stress & régulation émotionnelle</li>
-        <li>Confiance en soi & valorisation des talents</li>
-      </ul>
-    </section>
-    <section>
-      <h2>Ce que vit un jeune à Ludus Mentis</h2>
-      <p>Chaque séance alterne entre temps de jeu coopératif (Nintendo Switch), moments de réflexion en groupe, activités physiques ou créatives, et défis collectifs. L’objectif : apprendre en s’amusant, dans un cadre bienveillant et structuré.</p>
-    </section>
-    <section>
-      <h2>Compétences pour la vie</h2>
-      <p>Un atelier sur Rocket League développe la communication rapide et efficace. Overcooked permet d’explorer la gestion des rôles et la coordination. Chaque activité est pensée pour que les apprentissages soient transférables à la vie quotidienne.</p>
-    </section>
+  <main class="container">
+
+<section>
+  <h1>L’Académie Ludus Mentis</h1>
+  <p>Modules annuels avec 4 grandes thématiques, chacune composée de 7 séances de 2 heures : Communication & écoute active, Coopération & esprit d’équipe, Gestion du stress & régulation émotionnelle, Confiance en soi & valorisation des talents.</p>
+</section>
+<section>
+  <h2>Déroulement d’une séance</h2>
+  <p>Jeux coopératifs, réflexion en groupe, activités physiques ou créatives, défis collectifs. Chaque activité est pensée pour que les apprentissages soient transférables à la vie quotidienne.</p>
+</section>
+
   </main>
   <div id="footer"></div>
   <script src="assets/js/include.js"></script>
