--- a/index.html
+++ b/index.html
@@ -2,34 +2,27 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Notre concept – Ludus Mentis</title>
+    <title>Ludus Mentis – Accueil</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <div id="header"></div>
-  <main>
-    <section class="hero">
-      <h1>Faire du jeu vidéo un levier éducatif, citoyen et inclusif</h1>
-      <p>À Ludus Mentis, nous transformons la passion du jeu en compétences utiles pour la vie. Communication, coopération, gestion du stress : chaque séance est une opportunité d'apprendre en s'amusant.</p>
-      <a href="academie.html" class="cta">Découvrir l'académie</a>
-    </section>
-    <section class="intro">
-      <h2>Pourquoi Ludus Mentis&nbsp;?</h2>
-      <p>Le jeu vidéo est souvent critiqué. Pourtant, bien encadré, il devient un outil puissant pour développer des compétences sociales, émotionnelles et cognitives. Inspirés par les modèles des clubs sportifs et des académies de musique, nous proposons une structure pérenne et locale.</p>
-    </section>
-    <section class="benefits">
-      <h2>Les bénéfices pour votre enfant</h2>
-      <div class="benefit-grid">
-        <div><h3>Communication</h3><p>Exprimer ses idées clairement et écouter les autres.</p></div>
-        <div><h3>Esprit d’équipe</h3><p>Travailler ensemble vers un objectif commun.</p></div>
-        <div><h3>Gestion du stress</h3><p>Rester concentré et calme dans les moments clés.</p></div>
-        <div><h3>Confiance en soi</h3><p>Valoriser ses talents et oser prendre des initiatives.</p></div>
-      </div>
-    </section>
-    <section class="cta-section">
-      <h2>Prêt à découvrir une autre manière de jouer&nbsp;?</h2>
-      <p><a href="contact.html" class="cta">Contactez-nous</a> pour en savoir plus ou inscrire votre enfant.</p>
-    </section>
+  <main class="container">
+
+<section>
+  <h1>Faire du jeu vidéo un levier éducatif, citoyen et inclusif</h1>
+  <p>À Ludus Mentis, nous transformons la passion du jeu en compétences utiles pour la vie. Communication, coopération, gestion du stress : chaque séance est une opportunité d'apprendre en s'amusant.</p>
+</section>
+<section>
+  <h2>Les bénéfices pour votre enfant</h2>
+  <ul>
+    <li><strong>Communication :</strong> Exprimer ses idées clairement et écouter les autres.</li>
+    <li><strong>Esprit d’équipe :</strong> Travailler ensemble vers un objectif commun.</li>
+    <li><strong>Gestion du stress :</strong> Rester concentré et calme dans les moments clés.</li>
+    <li><strong>Confiance en soi :</strong> Valoriser ses talents et oser prendre des initiatives.</li>
+  </ul>
+</section>
+
   </main>
   <div id="footer"></div>
   <script src="assets/js/include.js"></script>
