--- a/methodologie.html
+++ b/methodologie.html
@@ -2,25 +2,23 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Notre concept – Ludus Mentis</title>
+    <title>Méthodologie – Ludus Mentis</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <div id="header"></div>
-  <main>
-    <h1>Notre approche pédagogique</h1>
-    <section>
-      <h2>Le cycle de Kolb</h2>
-      <p>Nous utilisons le cycle en quatre étapes : expérience concrète, réflexion, conceptualisation, expérimentation. Exemple : dans Overcooked, un conflit éclate. L’animateur facilite la discussion (réflexion), aide à comprendre les causes (conceptualisation) et met en place un plan pour la partie suivante (expérimentation).</p>
-    </section>
-    <section>
-      <h2>Le modèle SAFE</h2>
-      <p>SAFE signifie Séquencé, Actif, Focalisé et Explicite. Cette structure garantit un apprentissage progressif, engageant et pertinent.</p>
-    </section>
-    <section>
-      <h2>Des animateurs formés</h2>
-      <p>Toutes les sessions sont encadrées par des facilitateurs formés à la pédagogie Ludus Mentis, avec une attention particulière à la sécurité et au bien-être des jeunes.</p>
-    </section>
+  <main class="container">
+
+<section>
+  <h1>Notre approche pédagogique</h1>
+  <h2>Le cycle de Kolb</h2>
+  <p>Expérience concrète, réflexion, conceptualisation, expérimentation. Exemple : dans Overcooked, un conflit éclate. L’animateur facilite la discussion, aide à comprendre les causes, puis met en place un plan pour la partie suivante.</p>
+</section>
+<section>
+  <h2>Le modèle SAFE</h2>
+  <p>Séquencé, Actif, Focalisé, Explicite : pour un apprentissage progressif et engageant.</p>
+</section>
+
   </main>
   <div id="footer"></div>
   <script src="assets/js/include.js"></script>
