--- a/a-propos.html
+++ b/a-propos.html
@@ -2,33 +2,22 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Notre concept – Ludus Mentis</title>
+    <title>À propos – Ludus Mentis</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <div id="header"></div>
-  <main>
-    <h1>À propos de Ludus Mentis</h1>
-    <section>
-      <h2>Antoine Billard, fondateur</h2>
-      <p>Scout, musicien, sportif, ingénieur de gestion et aujourd’hui project manager en IT : mon parcours m’a appris la valeur de la coopération, de la discipline et de la passion. Depuis mon enfance, les jeux vidéo ont toujours fait partie de ma vie, entre activités réelles et expériences virtuelles. Aujourd’hui manager de l’équipe nationale belge de Dota 2, je suis convaincu que le jeu vidéo, bien encadré, est un formidable outil d’apprentissage.</p>
-    </section>
-    <section>
-      <h2>Notre vision</h2>
-      <p>Ludus Mentis est né à Walhain, avec l’ambition de transformer la pratique vidéoludique en un espace éducatif structuré, inclusif et citoyen. Inspirés des modèles pédagogiques du sport et de la musique, nous proposons une offre pérenne qui valorise la coopération, la communication et la confiance en soi.</p>
-    </section>
-    <section>
-      <h2>Partenaires</h2>
-      <p>La <strong>Commune de Walhain</strong> nous soutient par la mise à disposition de locaux et un accompagnement logistique. La <strong>BESF</strong> (Belgian Esports Federation) nous apporte sa caution éthique et un accompagnement sur le choix des jeux et la professionnalisation de l’encadrement.</p>
-    </section>
-    <section>
-      <h2>Frise chronologique</h2>
-      <ul>
-        <li>2024 – Idée du projet</li>
-        <li>2025 – Stage pilote à Walhain</li>
-        <li>2026 – Lancement de l’Académie Ludus Mentis</li>
-      </ul>
-    </section>
+  <main class="container">
+
+<section>
+  <h1>À propos de Ludus Mentis</h1>
+  <p>Scout, musicien, sportif, ingénieur de gestion et aujourd’hui project manager en IT : mon parcours m’a appris la valeur de la coopération, de la discipline et de la passion. Depuis mon enfance, les jeux vidéo ont toujours fait partie de ma vie, entre activités réelles et expériences virtuelles. Aujourd’hui manager de l’équipe nationale belge de Dota 2, je suis convaincu que le jeu vidéo, bien encadré, est un formidable outil d’apprentissage.</p>
+</section>
+<section>
+  <h2>Partenaires</h2>
+  <p>La Commune de Walhain nous soutient par la mise à disposition de locaux et un accompagnement logistique. La BESF (Belgian Esports Federation) nous apporte sa caution éthique et un accompagnement sur le choix des jeux et la professionnalisation de l’encadrement.</p>
+</section>
+
   </main>
   <div id="footer"></div>
   <script src="assets/js/include.js"></script>
