--- a/concept.html
+++ b/concept.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Notre concept – Ludus Mentis</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <!-- Header -->
