--- a/faq.html
+++ b/faq.html
@@ -2,23 +2,21 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Notre concept – Ludus Mentis</title>
+    <title>FAQ – Ludus Mentis</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <div id="header"></div>
-  <main>
-    <h1>Foire aux questions</h1>
-    <section>
-      <h2>Les jeux vidéo sont-ils violents&nbsp;?</h2>
-      <p>Non. Tous nos jeux sont choisis pour leur valeur pédagogique et leur absence de violence gratuite. Nous respectons strictement les recommandations PEGI.</p>
-      <h2>Combien de temps mon enfant passe-t-il devant l’écran&nbsp;?</h2>
-      <p>Chaque séance dure 2 heures, avec alternance entre jeu vidéo, activité physique et échanges en groupe.</p>
-      <h2>Et si mon enfant n’aime pas les jeux vidéo&nbsp;?</h2>
-      <p>Nos activités ne se limitent pas à jouer : elles incluent des ateliers créatifs, des jeux de rôle, et des défis coopératifs hors écran.</p>
-      <h2>Comment garantissez-vous la sécurité&nbsp;?</h2>
-      <p>Nos animateurs sont formés, et toutes les activités se déroulent dans un cadre sécurisé et adapté aux jeunes.</p>
-    </section>
+  <main class="container">
+
+<section>
+  <h1>Foire aux questions</h1>
+  <h2>Les jeux vidéo sont-ils violents&nbsp;?</h2>
+  <p>Non, tous nos jeux sont choisis pour leur valeur pédagogique et leur absence de violence gratuite. Nous respectons strictement les recommandations PEGI.</p>
+  <h2>Combien de temps devant l’écran&nbsp;?</h2>
+  <p>2 heures par séance, avec alternance entre jeu, activité physique et échanges.</p>
+</section>
+
   </main>
   <div id="footer"></div>
   <script src="assets/js/include.js"></script>
