--- a/index.html
+++ b/index.html
@@ -9,19 +9,41 @@
   <div id="header"></div>
   <main class="container">
 
-<section>
-  <h1>Faire du jeu vidéo un levier éducatif, citoyen et inclusif</h1>
-  <p>À Ludus Mentis, nous transformons la passion du jeu en compétences utiles pour la vie. Communication, coopération, gestion du stress : chaque séance est une opportunité d'apprendre en s'amusant.</p>
-</section>
-<section>
-  <h2>Les bénéfices pour votre enfant</h2>
-  <ul>
-    <li><strong>Communication :</strong> Exprimer ses idées clairement et écouter les autres.</li>
-    <li><strong>Esprit d’équipe :</strong> Travailler ensemble vers un objectif commun.</li>
-    <li><strong>Gestion du stress :</strong> Rester concentré et calme dans les moments clés.</li>
-    <li><strong>Confiance en soi :</strong> Valoriser ses talents et oser prendre des initiatives.</li>
-  </ul>
-</section>
+    <section class="section hero">
+      <img src="assets/images/Ludus_Mentis_Logo_Transparent.png" alt="Logo Ludus Mentis" style="max-width:120px; margin-bottom:1em;">
+      <h1>Et si le jeu vidéo devenait un tremplin pour grandir&nbsp;?</h1>
+      <p>
+        Chez <strong>Ludus Mentis</strong>, nous transformons la passion du jeu en compétences utiles pour la vie : communication, coopération, gestion du stress… Chaque séance est une opportunité d’apprendre en s’amusant.
+      </p>
+      <a href="concept.html" class="cta-button">Découvrir le concept</a>
+    </section>
+
+    <section class="section card">
+      <h2>Pourquoi Ludus Mentis&nbsp;?</h2>
+      <ul>
+        <li>🎮 Parce que les jeux vidéo sont une réalité quotidienne pour les jeunes.</li>
+        <li>🧠 Parce qu’ils peuvent devenir un outil de développement personnel puissant.</li>
+        <li>🤝 Parce qu’encadrés avec soin, ils permettent d’apprendre autrement.</li>
+      </ul>
+    </section>
+
+    <section class="section card">
+      <h2>Les bénéfices pour votre enfant</h2>
+      <ul>
+        <li><strong>Communication&nbsp;:</strong> Exprimer ses idées clairement et écouter les autres.</li>
+        <li><strong>Esprit d’équipe&nbsp;:</strong> Travailler ensemble vers un objectif commun.</li>
+        <li><strong>Gestion du stress&nbsp;:</strong> Rester concentré et calme dans les moments clés.</li>
+        <li><strong>Confiance en soi&nbsp;:</strong> Valoriser ses talents et oser prendre des initiatives.</li>
+      </ul>
+    </section>
+
+    <section class="section card">
+      <h2>Un projet soutenu localement</h2>
+      <p>
+        Ludus Mentis est une initiative locale soutenue par la <strong>commune de Walhain</strong> et la <strong>Fédération belge d’esport</strong>, portée par des acteurs engagés dans l’éducation, la prévention et l’innovation pédagogique.
+      </p>
+      <a href="academie.html" class="cta-button">Voir notre académie 2026</a>
+    </section>
 
   </main>
   <div id="footer"></div>
