--- a/academie.html
+++ b/academie.html
@@ -1,22 +1,45 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Académie – Ludus Mentis</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="UTF-8">
+  <title>Ludus Mentis – L'académie</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <div id="header"></div>
   <main class="container">
 
-<section>
-  <h1>L’Académie Ludus Mentis</h1>
-  <p>Modules annuels avec 4 grandes thématiques, chacune composée de 7 séances de 2 heures : Communication & écoute active, Coopération & esprit d’équipe, Gestion du stress & régulation émotionnelle, Confiance en soi & valorisation des talents.</p>
-</section>
-<section>
-  <h2>Déroulement d’une séance</h2>
-  <p>Jeux coopératifs, réflexion en groupe, activités physiques ou créatives, défis collectifs. Chaque activité est pensée pour que les apprentissages soient transférables à la vie quotidienne.</p>
-</section>
+    <section class="section card">
+      <h1>L’académie Ludus Mentis</h1>
+      <p>
+        Notre académie, c’est un programme innovant mêlant jeu vidéo coopératif, ateliers éducatifs, et activités physiques ou créatives pour les jeunes de 10 à 15 ans.
+      </p>
+    </section>
+
+    <section class="section card">
+      <h2>À qui s’adresse l’académie ?</h2>
+      <ul>
+        <li>Aux jeunes qui aiment le jeu vidéo, mais souhaitent aller plus loin : mieux communiquer, coopérer, gagner en confiance…</li>
+        <li>Aux parents qui cherchent une activité ludique, éducative et encadrée par des pros</li>
+      </ul>
+    </section>
+
+    <section class="section card">
+      <h2>Programme type</h2>
+      <ul>
+        <li>Échauffement collectif, puis session de jeu coopératif</li>
+        <li>Analyse, retour d’expérience, partage en groupe</li>
+        <li>Pause active : activité physique, jeu “hors écran” ou atelier créatif</li>
+      </ul>
+    </section>
+
+    <section class="section card">
+      <h2>Pour l’édition 2026</h2>
+      <p>
+        L’académie Ludus Mentis revient avec des nouveautés, des partenaires locaux et un cadre encore plus adapté à l’épanouissement de chaque participant.
+      </p>
+      <a href="contact.html" class="cta-button">Demander des infos</a>
+    </section>
 
   </main>
   <div id="footer"></div>
